<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PerawatanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/bg_biru"
        android:elevation="2dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/perawatan"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn6" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn7" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn8" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn9" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn10" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn11" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn12" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn13" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn14" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/prwtn15" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:textSize="17sp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:textSize="17sp"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>