<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PerkembanganActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/bg_biru"
        android:elevation="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/perkembangan"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/perkembangan1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/perkembangan2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/perkembangan3" />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/lele1"
                android:contentDescription="@string/img_lele"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/perkembangan4" />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/lele2"
                android:contentDescription="@string/img_lele2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="@font/noto_regular"
                android:textColor="@color/black"
                android:text="@string/perkembangan5" />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/lele3"
                android:contentDescription="@string/img_lele3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:textSize="17sp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:textSize="17sp"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>