<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TentangFragment"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:background="@drawable/round_corners2"
        android:backgroundTint="@color/biru"
        android:padding="20dp"
        android:elevation="4dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtvw1_tentang"
            android:fontFamily="@font/montserratbold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/btn_fr_tentang"/>
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txtvw2_tentang"
            android:fontFamily="@font/montserratregular"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>
</FrameLayout>